# akquant

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  TradingDay.con  index.html  latest  mkdocs.yml  pyproject.toml  repro_quickstart.py  requirements-dev.txt  sitemap.xml  test_init.py  versions.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.trae/rules/: env.md
.trae/skills/python-patterns/: SKILL.md
2024.04.01-11.42/: 404.html
2024.04.01-11.42/data-source/: index.html
2024.04.01-11.42/fin-data/: index.html
2024.04.01-11.42/installation/: index.html
2024.04.01-11.42/search/: search_index.json
2024.04.01-11.47/contributing/: index.html
2024.04.01-11.49/: index.html
2024.04.01-11.49/article/: index.html
2024.04.01-11.49/quant-resource/: index.html
2024.04.01-11.49/quickstart/: index.html
2024.04.15-06.55/: 404.html  CNAME  index.html
2024.04.15-06.55/article/: index.html
2024.04.15-06.55/contributing/: index.html
2024.04.15-06.55/data-source/: index.html
2024.04.15-06.55/fin-data/: index.html
2024.04.15-06.55/installation/: index.html
2024.04.15-06.55/quant-resource/: index.html
2024.04.15-06.55/quickstart/: index.html
2024.04.15-06.55/search/: search_index.json
advanced/llm/: index.html
advanced/ml/: index.html
advanced/timezone/: index.html
article/: index.html
data-source/: index.html
docs/: api.md  architecture.md  examples.md  index.md  installation.md  llm_guide.md  ml_guide.md  quickstart.md  robots.txt  strategy_guide.md  timezone.md  tutorial.md
docs/assets/reports/: akquant_report.html
docs/en/: api.md  architecture.md  backtest_result.md  design.md  env_guide.md  examples.md  index.md  installation.md  llm_guide.md  ml_guide.md  py_guide.md  quant_guide.md  quickstart.md  report_demo.md  strategy_guide.md  tutorial.md
docs/en/advanced/: llm.md  ml.md  timezone.md
docs/en/guide/: examples.md  strategy.md
docs/en/meta/: architecture.md
docs/en/reference/: api.md
docs/zh/: api.md  architecture.md  backtest_result.md  design.md  env_guide.md  examples.md  index.md  installation.md  llm_guide.md  metrics.md  ml_guide.md  quant_guide.md  quickstart.md  report_demo.md  strategy_guide.md  timezone.md  tutorial.md
docs/zh/advanced/: llm.md  ml.md  timezone.md
docs/zh/guide/: examples.md  python_basics.md  strategy.md
docs/zh/meta/: internals.md
docs/zh/reference/: api.md
docs/zh/start/: first_strategy.md  quickstart.md
en/: index.html
en/advanced/llm/: index.html
en/advanced/ml/: index.html
en/advanced/timezone/: index.html
en/guide/analysis/: index.html
en/guide/examples/: index.html
en/guide/python_basics/: index.html
en/guide/quant_basics/: index.html
en/guide/strategy/: index.html
en/guide/visualization/: index.html
en/meta/architecture/: index.html
en/meta/internals/: index.html
en/reference/api/: index.html
en/start/first_strategy/: index.html
en/start/installation/: index.html
en/start/quickstart/: index.html
en/start/setup_guide/: index.html
examples/: 01_quickstart.py  02_parameter_optimization.py  03_mixed_assets.py  04_live_trading_ctp.py  05_option_test.py  06_event_callbacks.py  11_multi_frequency.py  12_plot_intraday.py  benchmark.py  benchmark_akquant_multi.py  benchmark_utils.py  check_multi.py  check_ts.py  complex_orders.py  ctp_paper_trading.py  ctp_paper_trading_1min.py  debug_data.py  demo.py  event_callbacks_demo.py  kan.py  kan_bt.py  mixed_asset_demo.py  ml_framework_demo.py  ml_walk_forward_demo.py  multi_freq_demo_v2.py  optimization_demo.py  pb_mock.py  plot_demo.py  pybroker_strategy.py  quantstats_demo.py  test_hold_bar.py  verify_metrics_dynamic.py
examples/.pybrokercache/local_cache/data_source/: cache.db
fin-data/: index.html
guide/analysis/: index.html
guide/examples/: index.html
guide/python_basics/: index.html
guide/quant_basics/: index.html
guide/strategy/: index.html
guide/visualization/: index.html
installation/: index.html
meta/architecture/: index.html
meta/internals/: index.html
python/akquant/: __init__.py  akquant.pyi  backtest.py  config.py  data.py  indicator.py  live.py  log.py  optimize.py  plot.py  risk.py  sizer.py  strategy.py  utils.py
python/akquant/gateway/: __init__.py  ctp.py
python/akquant/ml/: __init__.py  model.py
python/akquant/plot/: __init__.py  analysis.py  dashboard.py  report.py  strategy.py  utils.py
python/akquant/utils/: __init__.py  inspector.py
quant-resource/: index.html
quickstart/: index.html
reference/api/: index.html
search/: search_index.json
src/: analysis.rs  clock.rs  context.rs  data.rs  engine.rs  error.rs  event.rs  event_manager.rs  execution.rs  history.rs  indicators.rs  lib.rs  market.rs  order.rs  order_manager.rs  portfolio.rs  risk.rs  types.rs
src/model/: instrument.rs  market_data.rs  mod.rs  order.rs  timer.rs  types.rs
start/first_strategy/: index.html
start/installation/: index.html
start/quickstart/: index.html
start/setup_guide/: index.html
tests/: test_engine.py  test_inspector.py  test_orders_df.py  test_portfolio.py  test_risk.py  test_stop_orders.py  test_strategy_extras.py  test_strategy_timers_indicators.py  test_t_plus_one.py  test_trades_df.py  test_version.py  verify_pnl.py  verify_stop_orders.py  verify_t_plus_one.py
