[package]
name = "akquant"
version = "0.1.34"
edition = "2024"
description = "High-performance quantitative trading framework based on Rust and Python"
license = "MIT"
authors = ["AKQuant Developers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "akquant"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py310", "chrono"] }
numpy = "0.27"
pyo3-stub-gen = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
polars = { version = "0.51.0", features = ["lazy", "parquet", "ipc", "csv"] }
rayon = "1.11"
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rust_decimal = { version = "1.40", features = ["serde-with-str", "maths"] }
indicatif = "0.18"
csv = "1.3"
thiserror = "2.0.18"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
test-utils = ["pyo3/auto-initialize"]
