[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "akquant"
version = "0.1.6"
description = "High-performance quantitative trading framework based on Rust and Python"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "AKQuant Developers"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.4.1",
    "pyarrow>=14.0.0",
    "tqdm>=4.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
full = [
    "matplotlib>=3.0.0",
    "plotly>=5.0.0",
]
plot = [
    "matplotlib>=3.0.0",
    "plotly>=5.0.0",
]
ml = [
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "akquant.akquant"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["torch.*", "sklearn.*", "matplotlib.*"]
ignore_missing_imports = true
